[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# https://docs.solana.com/developing/on-chain-programs/developing-rust#project-layout
#
# When toggled on this feature will cause the crate to not compile a
# bpf entrypoint.
#
# See the corresponding `#[cfg(not(feature = "exclude_entrypoint"))]`
# in lib.rs. This is needed so that other Solana programs can import
# helper functions from this library without causing symbol conflicts
# with our entrypoint.
exclude_entrypoint = []

[dependencies]
solana-program = "1"

[lib]
name = "helloSolana"
crate-type = ["cdylib", "lib"]